--- a/configuration.yaml
+++ b/configuration.yaml
@@ -52,15 +52,15 @@ vacuum:
     host: !secret ip_vacuum
     token: !secret mi_token
 
-camera:
-  - platform: xiaomi_cloud_map_extractor
-    host: !secret ip_vacuum
-    token: !secret mi_token
-    username: !secret default_username
-    password: !secret default_password
-    draw: ['all']
-    attributes:
-      - calibration_points  
+#camera:
+#  - platform: xiaomi_cloud_map_extractor
+#    host: !secret ip_vacuum
+#    token: !secret mi_token
+#    username: !secret default_username
+#    password: !secret default_password
+#    draw: ['all']
+#    attributes:
+#      - calibration_points  
 
 notify:
   - platform: pushover
