--- a/configuration.yaml
+++ b/configuration.yaml
@@ -4,6 +4,9 @@ logger:
   logs:
     custom_components.school: info
 
+frontend:
+  themes: !include_dir_merge_named themes
+
 default_config:
 python_script:
 
