--- a/automations.yaml
+++ b/automations.yaml
@@ -267,13 +267,26 @@
     entity_id: binary_sensor.motion_sensor
     platform: device
     type: motion
-  condition: []
-  action:
-  - data:
-      brightness_pct: "{% if now().hour > 6 and now().hour < 23 %}\n  80\n{%- else\
-        \ %}\n  10\n{% endif %}\n"
+  condition:
+  - condition: state
     entity_id: light.wc_lamp
-    service: light.turn_on
+    state: 'off'
+  action:
+  - choose:
+    - conditions:
+      - condition: time
+        after: '23:00:00'
+        before: 07:00:00
+      sequence:
+      - service: light.turn_on
+        data:
+          brightness_pct: 10
+        entity_id: light.wc_lamp
+    default:
+    - service: light.turn_on
+      data:
+        brightness_pct: 80
+      entity_id: light.wc_lamp
   mode: single
 - id: bathroom_light_on
   alias: 1_Lights 4_ON Bathroom lamp
@@ -281,21 +294,34 @@
   trigger:
   - type: motion
     platform: device
-    device_id: 90c09b1f4e4f499daf07ce6f280a4f31
-    entity_id: binary_sensor.tradfri_motion_sensor
-    domain: binary_sensor
-  - type: motion
-    platform: device
     device_id: 0211166bd85cbb1413f51a4e44fa09ae
     entity_id: binary_sensor.presence_13
     domain: binary_sensor
-  condition: []
+  condition:
+  - condition: or
+    conditions:
+    - condition: state
+      entity_id: light.bathroom_lamp
+      state: 'off'
+    - condition: template
+      value_template: '{{ state_attr(''light.bathroom_lamp'',''brightness'') == 51
+        }}'
   action:
-  - data:
-      brightness_pct: "{% if now().hour > 6 and now().hour < 23 %}\n  100\n{%- else\
-        \ %}\n  10\n{% endif %}\n"
-    entity_id: light.bathroom_lamp
-    service: light.turn_on
+  - choose:
+    - conditions:
+      - condition: time
+        after: '23:00:00'
+        before: 07:00:00
+      sequence:
+      - service: light.turn_on
+        data:
+          brightness_pct: 10
+        entity_id: light.bathroom_lamp
+    default:
+    - service: light.turn_on
+      data:
+        brightness_pct: 100
+      entity_id: light.bathroom_lamp
   mode: single
 - id: '1596644035996'
   alias: 99_Notify Water detection
@@ -340,18 +366,19 @@
     service: light.turn_off
   mode: single
 - id: bathroom_light_off
-  alias: 1_Lights 4_OFF bathroom lamp
+  alias: 1_Lights 4_OFF Bathroom lamp
   description: ''
   trigger:
   - type: no_motion
     platform: device
-    device_id: 90c09b1f4e4f499daf07ce6f280a4f31
-    entity_id: binary_sensor.tradfri_motion_sensor
+    device_id: 0211166bd85cbb1413f51a4e44fa09ae
+    entity_id: binary_sensor.presence_13
     domain: binary_sensor
     for:
       hours: 0
       minutes: 6
       seconds: 0
+      milliseconds: 0
   condition: []
   action:
   - data: {}
@@ -383,11 +410,26 @@
     device_id: e626c93c26c6490c9d2a9e71de6bbc80
     entity_id: binary_sensor.presence_5
     domain: binary_sensor
-  condition: []
-  action:
-  - data: {}
+  condition:
+  - condition: state
     entity_id: light.door_lamp
-    service: light.turn_on
+    state: 'off'
+  action:
+  - choose:
+    - conditions:
+      - condition: time
+        after: '23:00:00'
+        before: 07:00:00
+      sequence:
+      - service: light.turn_on
+        data:
+          brightness_pct: 10
+        entity_id: light.door_lamp
+    default:
+    - service: light.turn_on
+      data:
+        brightness_pct: 100
+      entity_id: light.door_lamp
   mode: single
 - id: '1596995179898'
   alias: 1_Lights 2_OFF Door lamp
@@ -1058,23 +1100,24 @@
     entity_id: light.tv_led_strip_lamp
   mode: single
 - id: '1610820878204'
-  alias: 1_Lights 4_DIM bathroom lamp
-  description: ''
+  alias: 1_Lights 4_DIM Bathroom lamp
+  description: Set brightness to 20 percent
   trigger:
   - type: no_motion
     platform: device
-    device_id: 90c09b1f4e4f499daf07ce6f280a4f31
-    entity_id: binary_sensor.tradfri_motion_sensor
+    device_id: 0211166bd85cbb1413f51a4e44fa09ae
+    entity_id: binary_sensor.presence_13
     domain: binary_sensor
     for:
       hours: 0
       minutes: 5
       seconds: 0
+      milliseconds: 0
   condition: []
   action:
   - service: light.turn_on
     data:
-      brightness_pct: 10
+      brightness: 51
     entity_id: light.bathroom_lamp
   mode: single
 - id: '1611427108068'
